Deploy Business Readiness Assessment v2.0
Major feature update with enhanced UX and comprehensive improvements:

Core Features:
- 3-tier tension line logic (≤40 / 41-70 / 71-100)
- AI Readiness Playbook section with 4 pillars (Transparency, Accountability, Capability, Trust)
- Micro-recommendations for all 10 priority gaps
- Score-based color coding (traffic light system)
- Conditional gaps rendering (hides section for perfect scores)
- HubSpot Meetings scheduler integration (inline embed)

UX Enhancements:
- Results page with dynamic content and sessionStorage
- Maturity Map with 4-step journey (Assess → Learn → Grow → Transform)
- Success footer with 90-day improvement messaging
- Capitalized CTA heading for stronger conversion
- Clarifying line for Maturity Map positioning
- Bridging sentence connecting gaps to playbook principles

Technical Improvements:
- PDF generation with retry/backoff for reliability
- XSS sanitization for user-entered fields
- Content Security Policy headers for HubSpot integration
- Email subject line standardization
- Consistent 'Subtle & Clean' styling across all sections
- Brand color palette implementation

Content Quality:
- Zero em dashes (replaced with colons in recommendations)
- NZ English spelling throughout
- All hyphens removed from tension lines and labels

Bug Fixes:
- Gap calculation now only includes imperfect scores (<5)
- Tension line logic fixed for high scores
- Individual question scores passed to frontend for color coding
- Frontend API endpoint configurable for local/production

Documentation:
- Comprehensive Azure deployment guide
- Logic App email setup instructions
- Deployment checklist and testing validation
- Dynamic content inventory (Version 2.0)
- Local development setup guides

--- a/tools/business-readiness-assessment/frontend/success.html
+++ b/tools/business-readiness-assessment/frontend/success.html
@@ -36,7 +36,7 @@
             <div class="alert alert--success mb-xl">
                 <strong>Your report is on its way</strong>
                 <p style="margin: var(--space-sm) 0 0;">
-                    Check your inbox — your personalised readiness analysis and recommendations
+                    Check your inbox, your personalised readiness analysis and recommendations
                     will arrive within the next 60 seconds.
                 </p>
             </div>
