--- a/tools/business-readiness-assessment/frontend/index.html
+++ b/tools/business-readiness-assessment/frontend/index.html
@@ -31,7 +31,7 @@
             </p>
             <div class="alert alert--info">
                 <strong>What you'll receive:</strong> Your Business AI Readiness Score (0-100), maturity band classification,
-                Shadow AI risk level, governance exposure assessment, and a prioritised action plan – delivered to your inbox within 60 seconds.
+                Shadow AI risk level, governance exposure assessment, and a prioritised action plan, delivered to your inbox within 60 seconds.
             </div>
         </div>
     </section>
@@ -246,7 +246,7 @@
                     <div class="form__radio-group">
                         <label class="form__radio">
                             <input type="radio" name="q5_shadow_ai" value="opt_5" required>
-                            <span class="form__radio-label">No unauthorised use – strong controls in place</span>
+                            <span class="form__radio-label">No unauthorised use, strong controls in place</span>
                         </label>
                         <label class="form__radio">
                             <input type="radio" name="q5_shadow_ai" value="opt_4">
@@ -308,19 +308,19 @@
                     <div class="form__radio-group">
                         <label class="form__radio">
                             <input type="radio" name="q7_compliance" value="opt_5" required>
-                            <span class="form__radio-label">Fully confident — legal obligations mapped and controls in place</span>
+                            <span class="form__radio-label">Fully confident, legal obligations mapped and controls in place</span>
                         </label>
                         <label class="form__radio">
                             <input type="radio" name="q7_compliance" value="opt_4">
-                            <span class="form__radio-label">Mostly confident — risks understood and mitigated</span>
+                            <span class="form__radio-label">Mostly confident, risks understood and mitigated</span>
                         </label>
                         <label class="form__radio">
                             <input type="radio" name="q7_compliance" value="opt_3">
-                            <span class="form__radio-label">Somewhat confident — partial understanding and oversight</span>
+                            <span class="form__radio-label">Somewhat confident, partial understanding and oversight</span>
                         </label>
                         <label class="form__radio">
                             <input type="radio" name="q7_compliance" value="opt_2">
-                            <span class="form__radio-label">Not confident — limited awareness or checks</span>
+                            <span class="form__radio-label">Not confident, limited awareness or checks</span>
                         </label>
                         <label class="form__radio">
                             <input type="radio" name="q7_compliance" value="opt_1">
@@ -372,11 +372,11 @@
                     <div class="form__radio-group">
                         <label class="form__radio">
                             <input type="radio" name="q9_data_protection" value="opt_5" required>
-                            <span class="form__radio-label">Fully confident – technical controls prevent it</span>
+                            <span class="form__radio-label">Fully confident, technical controls prevent it</span>
                         </label>
                         <label class="form__radio">
                             <input type="radio" name="q9_data_protection" value="opt_4">
-                            <span class="form__radio-label">Confident – strong policies and monitoring</span>
+                            <span class="form__radio-label">Confident, strong policies and monitoring</span>
                         </label>
                         <label class="form__radio">
                             <input type="radio" name="q9_data_protection" value="opt_3">
@@ -384,7 +384,7 @@
                         </label>
                         <label class="form__radio">
                             <input type="radio" name="q9_data_protection" value="opt_2">
-                            <span class="form__radio-label">Not confident — some exposure likely</span>
+                            <span class="form__radio-label">Not confident, some exposure likely</span>
                         </label>
                         <label class="form__radio">
                             <input type="radio" name="q9_data_protection" value="opt_1">
